--- a/fs2_open-svn/PKGBUILD
+++ b/fs2_open-svn/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Lone_Wolf <lonewolf@xs4all.nl>
 
 pkgname=fs2_open-svn
-pkgver=9378
+pkgver=9422
 pkgrel=1
 pkgdesc="An enhancement of the original Freespace 2 engine - SVN version"
 url="http://scp.indiegames.us"
@@ -44,7 +44,7 @@ build()
 
 	patch -Np0 -i "$srcdir/increase_joy_buttons_fixed.patch"
 
-	./autogen.sh --enable-speech --enable-inferno
+	LDFLAGS="-l:liblua.so.5.1 $LDFLAGS" CXXFLAGS="-I/usr/include/lua5.1 $CXXFLAGS" ./autogen.sh --enable-speech
 	make
 }
 
