--- a/fs2_open-svn/PKGBUILD
+++ b/fs2_open-svn/PKGBUILD
@@ -8,7 +8,7 @@ pkgdesc="An enhancement of the original Freespace 2 engine - SVN version"
 url="http://scp.indiegames.us"
 arch=('i686' 'x86_64')
 license=('custom:fs2_open')
-depends=('libjpeg' 'libpng' 'libtheora' 'libvorbis' 'lua' 'mesa' 'openal' 'sdl')
+depends=('libjpeg' 'libpng' 'libtheora' 'libvorbis' 'lua51' 'mesa' 'openal' 'sdl')
 makedepends=('subversion')
 provides=('fs2_open')
 install=fs2_open-svn.install
